--- a/config/cfg_pretrain.yaml
+++ b/config/cfg_pretrain.yaml
@@ -8,7 +8,7 @@ hydra:
   output_subdir: null
 
 # Data path
-data_path: data\sudoku-extreme-1k-aug-1000
+data_path: data\tsp_data
 
 # Hyperparams - Training
 global_batch_size: 256
